--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -2132,6 +2132,7 @@ header {
 			&,
 			img {
 				border-radius: 32px;
+				height: calc(var(--pic-h) / 2);
 			}
 		}
 	}
